# QTradingView

./: .gitignore  CMakeCache.txt  CMakeLists.txt  GraphingView.cpp  GraphingView.h  Makefile  QTradingView  axes.cpp  axes.h  candleBody.cpp  candleBody.h  candleStickDataStream.cpp  candleStickDataStream.h  candleStickState.cpp  candleStickState.h  candleStickWick.cpp  candleStickWick.h  candlestick.cpp  candlestick.h  cmake_install.cmake  dbManager.cpp  dbManager.h  graph.cpp  graph.h  graphTimeFrameNode.cpp  graphTimeFrameNode.h  graphWindow.cpp  graphWindow.h  mainwindow.cpp  mainwindow.h  pathGraphPoint.h  todo
.qt/: QtDeploySupport.cmake
.qt/deploy_qml_imports/: QTradingView.cmake
.qt_plugins/: Qt6_QmlPlugins_Imports_QTradingView.rsp
QTradingView_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
QTradingView_autogen/EWIEGA46WW/: moc_GraphingView.cpp  moc_GraphingView.cpp.d  moc_candleBody.cpp  moc_candleBody.cpp.d  moc_candleStickDataStream.cpp  moc_candleStickDataStream.cpp.d  moc_candleStickWick.cpp  moc_candleStickWick.cpp.d  moc_candlestick.cpp  moc_candlestick.cpp.d  moc_graphTimeFrameNode.cpp  moc_graphTimeFrameNode.cpp.d  moc_graphWindow.cpp  moc_graphWindow.cpp.d
lib/QScintilla/src/: Makefile  libqscintilla2_qt6.so.15.2  moc_SciClasses.cpp  moc_ScintillaQt.cpp  moc_predefs.h  moc_qsciabstractapis.cpp  moc_qsciapis.cpp  moc_qscilexer.cpp  moc_qscilexerasm.cpp  moc_qscilexeravs.cpp  moc_qscilexerbash.cpp  moc_qscilexerbatch.cpp  moc_qscilexercmake.cpp  moc_qscilexercoffeescript.cpp  moc_qscilexercpp.cpp  moc_qscilexercsharp.cpp  moc_qscilexercss.cpp  moc_qscilexercustom.cpp  moc_qscilexerd.cpp  moc_qscilexerdiff.cpp  moc_qscilexeredifact.cpp  moc_qscilexerfortran.cpp  moc_qscilexerfortran77.cpp  moc_qscilexerhex.cpp  moc_qscilexerhtml.cpp  moc_qscilexeridl.cpp  moc_qscilexerintelhex.cpp  moc_qscilexerjava.cpp  moc_qscilexerjavascript.cpp  moc_qscilexerjson.cpp  moc_qscilexerlua.cpp  moc_qscilexermakefile.cpp  moc_qscilexermarkdown.cpp  moc_qscilexermasm.cpp  moc_qscilexermatlab.cpp  moc_qscilexernasm.cpp  moc_qscilexeroctave.cpp  moc_qscilexerpascal.cpp  moc_qscilexerperl.cpp  moc_qscilexerpo.cpp  (+18 more)
